lib/misc/ace.h

      /*
       * long on Linux has a variable size depending on the underlying
       * architecture.
       */
      typedef unsigned int   UNSIGNED32;
      typedef int            SIGNED32;
      typedef unsigned long  UNSIGNED32;
      typedef long           SIGNED32;
   typedef unsigned short UNSIGNED16;
   typedef short          SIGNED16;
   typedef unsigned char  UNSIGNED8;
      typedef unsigned short WCHAR;
      typedef unsigned short WCHAR;
         // Long is 64 bits in GCC.
         typedef unsigned long  ADSHANDLE;
         typedef unsigned __int64  ADSHANDLE;
      typedef unsigned long  ADSHANDLE;
   typedef double         DOUBLE;
   typedef LONGLONG         SIGNED64;
         typedef __int64          SIGNED64;
   typedef long long int            SIGNED64;
UNSIGNED32 ENTRYPOINT AdsOpenTable(
                              ADSHANDLE        hConnect,
                              UNSIGNED8        *pucName,
                              UNSIGNED8        *pucAlias,
                              UNSIGNED16       usTableType,
                              UNSIGNED16       usCharType,
                              UNSIGNED16       usLockType,
                              UNSIGNED16       usCheckRights,
                              UNSIGNED32       ulOptions,
                              ADSHANDLE        *phTable );
UNSIGNED32 ENTRYPOINT AdsOpenTable90(
                              ADSHANDLE        hConnect,
                              UNSIGNED8        *pucName,
                              UNSIGNED8        *pucAlias,
                              UNSIGNED16       usTableType,
                              UNSIGNED16       usCharType,
                              UNSIGNED16       usLockType,
                              UNSIGNED16       usCheckRights,
                              UNSIGNED32       ulOptions,
                              UNSIGNED8        *pucCollation,
                              ADSHANDLE        *phTable );
UNSIGNED32 ENTRYPOINT AdsOpenTable101(
                              ADSHANDLE        hConnect,
                              UNSIGNED8        *pucName,
                              ADSHANDLE        *phTable );
UNSIGNED32 ENTRYPOINT AdsPackTable( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsPackTable120( ADSHANDLE  hTable,
                                       UNSIGNED32 ulMemoBlockSize,
                                       UNSIGNED32 ulOptions );
UNSIGNED32 ENTRYPOINT AdsRecallRecord( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsRecallAllRecords( ADSHANDLE hTable );
UNSIGNED32 ENTRYPOINT AdsRefreshRecord( ADSHANDLE hTable );
   UNSIGNED32 ENTRYPOINT AdsClearProgressCallback( void );
   UNSIGNED32 ENTRYPOINT AdsRegisterProgressCallback(
         UNSIGNED32 (WINAPI *lpfnCallback)( UNSIGNED16 usPercent ) );
   UNSIGNED32 ENTRYPOINT AdsRegisterCallbackFunction(
         UNSIGNED32 (WINAPI *lpfnCallback)( UNSIGNED16 usPercent, UNSIGNED32 ulCallbackID ),
         UNSIGNED32 ulCallbackID );
   UNSIGNED32 ENTRYPOINT AdsRegisterCallbackFunction101(
         UNSIGNED32 (WINAPI *lpfnCallback)( UNSIGNED16 usPercent, SIGNED64 qCallbackID ),
         SIGNED64 qCallbackID );
UNSIGNED32 ENTRYPOINT AdsClearCallbackFunction( void );
   UNSIGNED32 ENTRYPOINT AdsSetSQLTimeout( ADSHANDLE  hObj,
                                        UNSIGNED32 ulTimeout );
UNSIGNED32 ENTRYPOINT AdsReindex( ADSHANDLE hObject );
UNSIGNED32 ENTRYPOINT AdsReindex61( ADSHANDLE  hObject,
                                    UNSIGNED32 ulPageSize );
UNSIGNED32 ENTRYPOINT AdsReindexFTS( ADSHANDLE  hObject,
                                    UNSIGNED32 ulPageSize );
UNSIGNED32 ENTRYPOINT AdsResetConnection( ADSHANDLE hConnect );
UNSIGNED32 ENTRYPOINT AdsRollbackTransaction( ADSHANDLE hConnect );
UNSIGNED32 ENTRYPOINT AdsSeek(
                              ADSHANDLE        hIndex,
                              UNSIGNED8        *pucKey,
                              UNSIGNED16       usKeyLen,
                              UNSIGNED16       usDataType,
                              UNSIGNED16       usSeekType,
                              UNSIGNED16       *pbFound );
UNSIGNED32 ENTRYPOINT AdsSeekLast(
                                  ADSHANDLE        hIndex,
                                  UNSIGNED8        *pucKey,
                                  UNSIGNED16       usKeyLen,
                                  UNSIGNED16       usDataType,
                                  UNSIGNED16       *pbFound );
UNSIGNED32 ENTRYPOINT AdsSetBinary(
                              ADSHANDLE        hTable,
                              UNSIGNED8        *pucFldName,
                              UNSIGNED16       usBinaryType,
                              UNSIGNED32       ulTotalLength,
                              UNSIGNED32       ulOffset,
                              UNSIGNED8        *pucBuf,
                              UNSIGNED32       ulLen );
UNSIGNED32 ENTRYPOINT AdsSetCollationLang( UNSIGNED8 *pucLang );
UNSIGNED32 ENTRYPOINT AdsSetCollation(
                              ADSHANDLE        hConnect,
                              UNSIGNED8        *pucCollation );
UNSIGNED32 ENTRYPOINT AdsSetDate(
                              ADSHANDLE        hObj,
                              UNSIGNED8        *pucFldName,
                              UNSIGNED8        *pucValue,
                              UNSIGNED16       usLen );
UNSIGNED32 ENTRYPOINT AdsSetDateFormat( UNSIGNED8 *pucFormat );
UNSIGNED32 ENTRYPOINT AdsSetDateFormat60( ADSHANDLE hConnect,
                                          UNSIGNED8 *pucFormat );
UNSIGNED32 ENTRYPOINT AdsSetDecimals( UNSIGNED16 usDecimals );
UNSIGNED32 ENTRYPOINT AdsSetDefault( UNSIGNED8 *pucDefault );
UNSIGNED32 ENTRYPOINT AdsShowDeleted( UNSIGNED16 bShowDeleted );
UNSIGNED32 ENTRYPOINT AdsSetDouble(
                              ADSHANDLE        hObj,
                              UNSIGNED8        *pucFldName,
                              DOUBLE           dValue );
UNSIGNED32 ENTRYPOINT AdsSetEmpty(
                              ADSHANDLE        hObj,
                              UNSIGNED8        *pucFldName );
UNSIGNED32 ENTRYPOINT AdsSetEpoch( UNSIGNED16 usCentury );
UNSIGNED32 ENTRYPOINT AdsSetExact( UNSIGNED16 bExact );
UNSIGNED32 ENTRYPOINT AdsSetExact22(
                              ADSHANDLE        hObj,
                              UNSIGNED16       bExact );
UNSIGNED32 ENTRYPOINT AdsSetField(
                                 ADSHANDLE        hObj,
                                 UNSIGNED8        *pucFldName,
                                 UNSIGNED8        *pucBuf,
                                 UNSIGNED32       ulLen );
UNSIGNED32 ENTRYPOINT AdsSetFieldW( ADSHANDLE       hObj,
                                    UNSIGNED8       *pucFldName,
                                    WCHAR           *pwcBuf,
                                    UNSIGNED32      ulLen );
UNSIGNED32 ENTRYPOINT AdsSetFilter(
                                  ADSHANDLE        hTable,
                                  UNSIGNED8        *pucFilter );
UNSIGNED32 ENTRYPOINT AdsSetFilter100( ADSHANDLE   hTable,
                                       VOID        *pvFilter,
                                       UNSIGNED32  ulOptions );
UNSIGNED32 ENTRYPOINT AdsSetHandleLong(
                                      ADSHANDLE        hObj,
                                      UNSIGNED32       ulVal );
UNSIGNED32 ENTRYPOINT AdsSetJulian(
                                  ADSHANDLE        hObj,
                                  UNSIGNED8        *pucFldName,
                                  SIGNED32         lDate );
UNSIGNED32 ENTRYPOINT AdsSetLogical(
                                   ADSHANDLE        hObj,
                                   UNSIGNED8        *pucFldName,
                                   UNSIGNED16       bValue );
UNSIGNED32 ENTRYPOINT AdsSetLong(
                                ADSHANDLE        hObj,
                                UNSIGNED8        *pucFldName,
                                SIGNED32         lValue );
UNSIGNED32 ENTRYPOINT AdsSetLongLong(
                                ADSHANDLE        hObj,
                                UNSIGNED8        *pucFldName,
                                SIGNED64         qValue );
UNSIGNED32 ENTRYPOINT AdsSetMilliseconds(
                                        ADSHANDLE        hObj,
                                        UNSIGNED8        *pucFldName,
                                        SIGNED32         lTime );
UNSIGNED32 ENTRYPOINT AdsSetMoney(
                                ADSHANDLE  hObj,
                                UNSIGNED8  *pucFldName,
                                SIGNED64   qValue );
UNSIGNED32 ENTRYPOINT AdsSetRecord(
                                  ADSHANDLE        hObj,
                                  UNSIGNED8        *pucRec,
                                  UNSIGNED32       ulLen );
UNSIGNED32 ENTRYPOINT AdsSetRelation(
                                    ADSHANDLE        hTableParent,
                                    ADSHANDLE        hIndexChild,
                                    UNSIGNED8        *pucExpr );
UNSIGNED32 ENTRYPOINT AdsSetRelKeyPos(
                                     ADSHANDLE        hIndex,
                                     DOUBLE           dPos );
UNSIGNED32 ENTRYPOINT AdsSetScope(
                                 ADSHANDLE        hIndex,
                                 UNSIGNED16       usScopeOption,
                                 UNSIGNED8        *pucScope,
                                 UNSIGNED16       usScopeLen,
                                 UNSIGNED16       usDataType );
UNSIGNED32 ENTRYPOINT AdsSetScopedRelation(
                                          ADSHANDLE        hTableParent,
                                          ADSHANDLE        hIndexChild,
                                          UNSIGNED8        *pucExpr );
UNSIGNED32 ENTRYPOINT AdsSetSearchPath( UNSIGNED8 *pucPath );
UNSIGNED32 ENTRYPOINT AdsSetServerType( UNSIGNED16 usServerOptions );
UNSIGNED32 ENTRYPOINT AdsSetShort(
                                 ADSHANDLE        hObj,
                                 UNSIGNED8        *pucFldName,
                                 SIGNED16         sValue );
UNSIGNED32 ENTRYPOINT AdsSetString( ADSHANDLE        hObj,
                                    UNSIGNED8        *pucFldName,
                                    UNSIGNED8        *pucBuf,
                                    UNSIGNED32       ulLen );
UNSIGNED32 ENTRYPOINT AdsSetStringW( ADSHANDLE       hObj,
                                     UNSIGNED8       *pucFldName,
                                     WCHAR           *pwcBuf,
                                     UNSIGNED32      ulLen );
   UNSIGNED32 ENTRYPOINT AdsRegisterSQLAbortFunc( UNSIGNED32 (WINAPI *lpfnCallback)(void) );
   UNSIGNED32 ENTRYPOINT AdsRegisterUDF( ADSHANDLE  hObj,
                                         UNSIGNED16 usType,
                                         UNSIGNED32 (WINAPI *lpfnUDF)(void) );