lib/misc/ace.pas


      function AdsOpenTable( hConnect: ADSHANDLE;
                             pucName: PAceChar;
                             pucAlias: PAceChar;
                             usTableType: UNSIGNED16;
                             usCharType: UNSIGNED16;
                             usLockType: UNSIGNED16;
                             usCheckRights: UNSIGNED16;
                             ulOptions: UNSIGNED32;
                             phTable: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsOpenTable90( hConnect: ADSHANDLE;
                               pucName: PAceChar;
                               pucAlias: PAceChar;
                               usTableType: UNSIGNED16;
                               usCharType: UNSIGNED16;
                               usLockType: UNSIGNED16;
                               usCheckRights: UNSIGNED16;
                               ulOptions: UNSIGNED32;
                               pucCollation: PAceChar;
                               phTable: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsOpenTable101( hConnect: ADSHANDLE;
                                pucName: PAceChar;
                                phTable: pADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsPackTable( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsPackTable120( hTable: ADSHANDLE;
                                ulMemoBlockSize: UNSIGNED32;
                                ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsRecallRecord( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsRecallAllRecords( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsRefreshRecord( hTable: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsClearProgressCallback:UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsRegisterProgressCallback( Callback: TProgressCallback ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsRegisterCallbackFunction( Callback: TCallbackFunction;
                                            ulCallbackID: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

{$IFDEF ADSDELPHI4_OR_NEWER}
      function AdsRegisterCallbackFunction101( Callback: TCallbackFunction101;
                                               qCallbackID: SIGNED64 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
{$ENDIF}

      function AdsClearCallbackFunction:UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetSQLTimeout( hObj: ADSHANDLE;
                                 ulTimeout: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsReindex( hObject: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsReindex61( hObject: ADSHANDLE;
                             ulPageSize: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsReindexFTS( hObject: ADSHANDLE;
                              ulPageSize: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsResetConnection( hConnect: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsRollbackTransaction( hConnect: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSeek( hIndex: ADSHANDLE;
                        pucKey: PAceChar;
                        usKeyLen: UNSIGNED16;
                        usDataType: UNSIGNED16;
                        usSeekType: UNSIGNED16;
                        pbFound: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSeekLast( hIndex: ADSHANDLE;
                            pucKey: PAceChar;
                            usKeyLen: UNSIGNED16;
                            usDataType: UNSIGNED16;
                            pbFound: PUNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetBinary( hTable: ADSHANDLE;
                             pucFldName: PAceChar;
                             usBinaryType: UNSIGNED16;
                             ulTotalLength: UNSIGNED32;
                             ulOffset: UNSIGNED32;
                             pucBuf: PAceBinary;
                             ulLen: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetCollationLang( pucLang: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetCollation( hConnect: ADSHANDLE;
                                pucCollation: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetDate( hObj: ADSHANDLE;
                           pucFldName: PAceChar;
                           pucValue: PAceChar;
                           usLen: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetDateFormat( pucFormat: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetDateFormat60( hConnect: ADSHANDLE;
                                   pucFormat: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetDecimals( usDecimals: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetDefault( pucDefault: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsShowDeleted( bShowDeleted: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetDouble( hObj: ADSHANDLE;
                             pucFldName: PAceChar;
                             dValue: DOUBLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetEmpty( hObj: ADSHANDLE;
                            pucFldName: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetEpoch( usCentury: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetExact( bExact: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetExact22( hObj: ADSHANDLE;
                              bExact: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetField( hObj: ADSHANDLE;
                            pucFldName: PAceChar;
                            pucBuf: PAceChar;
                            ulLen: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetFieldW( hObj: ADSHANDLE;
                             pucFldName: PAceChar;
                             pwcBuf: PWideChar;
                             ulLen: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetFilter( hTable: ADSHANDLE;
                             pucFilter: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetFilter100( hTable: ADSHANDLE;
                                pvFilter: pointer;
                                ulOptions: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetHandleLong( hObj: ADSHANDLE;
                                 ulVal: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetJulian( hObj: ADSHANDLE;
                             pucFldName: PAceChar;
                             lDate: SIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetLogical( hObj: ADSHANDLE;
                              pucFldName: PAceChar;
                              bValue: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetLong( hObj: ADSHANDLE;
                           pucFldName: PAceChar;
                           lValue: SIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

{$IFDEF ADSDELPHI4_OR_NEWER}
      function AdsSetLongLong( hObj: ADSHANDLE;
                               pucFldName: PAceChar;
                               qValue: SIGNED64 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
{$ENDIF}

      function AdsSetMilliseconds( hObj: ADSHANDLE;
                                   pucFldName: PAceChar;
                                   lTime: SIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

{$IFDEF ADSDELPHI4_OR_NEWER}
      function AdsSetMoney( hObj: ADSHANDLE;
                            pucFldName: PAceChar;
                            qValue: SIGNED64 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
{$ENDIF}

      function AdsSetRecord( hObj: ADSHANDLE;
                             pucRec: PAceChar;
                             ulLen: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetRelation( hTableParent: ADSHANDLE;
                               hIndexChild: ADSHANDLE;
                               pucExpr: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetRelKeyPos( hIndex: ADSHANDLE;
                                dPos: DOUBLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetScope( hIndex: ADSHANDLE;
                            usScopeOption: UNSIGNED16;
                            pucScope: PAceChar;
                            usScopeLen: UNSIGNED16;
                            usDataType: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetScopedRelation( hTableParent: ADSHANDLE;
                                     hIndexChild: ADSHANDLE;
                                     pucExpr: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetSearchPath( pucPath: PAceChar ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetServerType( usServerOptions: UNSIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetShort( hObj: ADSHANDLE;
                            pucFldName: PAceChar;
                            sValue: SIGNED16 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetString( hObj: ADSHANDLE;
                             pucFldName: PAceChar;
                             pucBuf: PAceChar;
                             ulLen: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

      function AdsSetStringW( hObj: ADSHANDLE;
                              pucFldName: PAceChar;
                              pwcBuf: PWideChar;
                              ulLen: UNSIGNED32 ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
